--- a/config.yml
+++ b/config.yml
@@ -10,4 +10,4 @@ server:
 
 database: # for database see (configure database section)
   dbname: typicode
-  connection: mongodb://localhost:27017
+  connection: mongodb://root:123456@localhost:27017
