--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,9 @@
     "@types/node": "11.11.5",
     "@types/react": "16.8.8",
     "@types/react-dom": "16.8.3",
+    "ra-data-json-server": "^2.8.0",
     "react": "^16.8.4",
+    "react-admin": "^2.8.2",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8",
     "typescript": "3.3.4000"
