--- a/.drone.yml
+++ b/.drone.yml
@@ -39,7 +39,7 @@ steps:
         from_secret: username
       password:
         from_secret: password
-      target: /root
+      target: /data/wwwroot/tma-api
       source: docker-compose.yml
 
   - name: ssh
@@ -55,9 +55,8 @@ steps:
       password:
         from_secret: password
       script:
-        - docker-compose pull app_1 app_2
-        - docker-compose up -d --force-recreate --no-deps app_1
-        - docker-compose up -d --force-recreate --no-deps app_2
+        - docker-compose pull backend
+        - docker-compose up -d --force-recreate --no-deps backend
         - docker images --quiet --filter=dangling=true | xargs --no-run-if-empty docker rmi -f
   
 trigger:
