--- a/docker-compose-express-mongo.yml
+++ b/docker-compose-express-mongo.yml
@@ -5,6 +5,8 @@ services:
   mongo:
     image: mongo:4.0.6
     restart: always
+    networks:
+      - web
     ports:
       - 27017:27017
     volumes:
