--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   backend:
-    image: lotteryjs/ten-minutes-app-api
+    image: lotteryjs/ten-minutes-app-api:latest
     networks:
       - web
     logging:
