--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   backend:
-    image: lotteryjs/ten-minutes-app-api:latest
+    image: lotteryjs/ten-minutes-app-api
     networks:
       - web
     logging:
@@ -12,7 +12,7 @@ services:
     labels:
       - "traefik.docker.network=web"
       - "traefik.enable=true"
-      - "traefik.basic.frontend.rule=Host:tenapi.lotteryjs.com"
+      - "traefik.basic.frontend.rule=Host:api-ten-m.lotteryjs.com"
       - "traefik.basic.port=6868"
       - "traefik.basic.protocol=http"
 
