--- a/.drone.yml
+++ b/.drone.yml
@@ -55,8 +55,9 @@ steps:
       password:
         from_secret: password
       script:
-        - docker-compose pull api
-        - docker-compose up -d --force-recreate --no-deps api
+        - cd /data/wwwroot/tenapi
+        - docker-compose pull api-ten-minutes
+        - docker-compose up -d --force-recreate --no-deps api-ten-minutes
         - docker images --quiet --filter=dangling=true | xargs --no-run-if-empty docker rmi -f
   
 trigger:
