--- a/config.yml
+++ b/config.yml
@@ -8,7 +8,7 @@ server:
     Access-Control-Allow-Credentials: "true"
     Access-Control-Allow-Headers: "content-type"
     Access-Control-Allow-Methods: "GET,HEAD,PUT,PATCH,POST,DELETE"
-    Access-Control-Allow-Origin: "ten-minutes.lotteryjs.com,localhost:3000"
+    Access-Control-Allow-Origin: "https://ten-minutes.lotteryjs.com,https://localhost:3000"
     Access-Control-Expose-Headers: "X-Total-Count"
 
 database: # for database see (configure database section)
