--- a/.drone.yml
+++ b/.drone.yml
@@ -57,7 +57,7 @@ steps:
       script:
         - cd /data/wwwroot/tenapi
         - docker-compose pull api-ten-minutes
-        - docker-compose up -f docker-compose.API.yml -d --force-recreate --no-deps api-ten-minutes
+        - docker-compose -f docker-compose.API.yml up -d --force-recreate --no-deps api-ten-minutes
         - docker images --quiet --filter=dangling=true | xargs --no-run-if-empty docker rmi -f
   
 trigger:
