--- a/.drone.yml
+++ b/.drone.yml
@@ -1,4 +1,96 @@
 kind: pipeline
+name: build_ui
+
+clone:
+  depth: 50
+
+steps:
+  - name: fetch
+    image: docker:git
+    commands:
+      - git fetch --tags
+
+  - name: restore-cache
+    image: drillster/drone-volume-cache
+    restore: true
+    mount:
+      - ./app/.yarn-cache
+      - ./app/node_modules
+    volumes:
+      - /tmp/cache:/cache
+
+  - name: build
+    image: node:10.15.1
+    commands:
+      - cd app
+      - node -v
+      - npm -v
+      - yarn --version
+      - yarn config set cache-folder .yarn-cache
+      - yarn install --pure-lockfile
+      - yarn build
+
+  - name: publish image
+    image: plugins/docker:17.12
+    settings:
+      repo: lotteryjs/ui-ten-minutes
+      auto_tag: true
+      dockerfile: Dockerfile.UI
+      username:
+        from_secret: docker_username
+      password:
+        from_secret: docker_password
+        
+  - name: scp
+    image: appleboy/drone-scp
+    settings:
+      host:
+        from_secret: host
+      port:
+        from_secret: port
+      username:
+        from_secret: username
+      password:
+        from_secret: password
+      target: /data/wwwroot/ten-minutes
+      source: docker-compose.UI.yml
+
+  - name: ssh
+    image: appleboy/drone-ssh
+    pull: true
+    settings:
+      host:
+        from_secret: host
+      port:
+        from_secret: port
+      username:
+        from_secret: username
+      password:
+        from_secret: password
+      script:
+        - cd /data/wwwroot/ten-minutes
+        - docker-compose pull ui-ten-minutes
+        - docker-compose -f docker-compose.UI.yml up -d --force-recreate --no-deps ui-ten-minutes
+        - docker images --quiet --filter=dangling=true | xargs --no-run-if-empty docker rmi -f
+
+  rebuild-cache:
+    image: drillster/drone-volume-cache
+    rebuild: true
+    mount:
+      - ./app/.yarn-cache
+      - ./app/node_modules
+    volumes:
+      - /tmp/cache:/cache
+    when:
+      branch: master
+
+trigger:
+  event:
+    - tag
+
+---
+
+kind: pipeline
 name: build_linux_amd64
 
 clone:
@@ -22,7 +114,7 @@ steps:
     settings:
       repo: lotteryjs/api-ten-minutes
       auto_tag: true
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.API
       username:
         from_secret: docker_username
       password:
