--- a/.drone.yml
+++ b/.drone.yml
@@ -17,12 +17,8 @@ steps:
       path: /tmp/cache
     commands:
       - cd app
-      - node -v
-      - npm -v
-      - yarn --version
-      - yarn config set cache-folder .yarn-cache
-      - yarn install --pure-lockfile
-      - yarn build
+      - npm install
+      - npm run build
 
   - name: publish image
     image: plugins/docker:17.12
@@ -67,16 +63,6 @@ steps:
         - docker-compose -f docker-compose.UI.yml up -d --force-recreate --no-deps ui-ten-minutes
         - docker images --quiet --filter=dangling=true | xargs --no-run-if-empty docker rmi -f
 
-  - name: rebuild-cache
-    image: drillster/drone-volume-cache
-    rebuild: true
-    mount:
-      - ./app/.yarn-cache
-      - ./app/node_modules
-    volumes:
-      - /tmp/cache:/cache
-    when:
-      branch: master
 
 volumes:
 - name: cache
